sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:9: error: value =- is not a member of Int
    o=-1
     ^