sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var i=0
  var n=getNombreValeurs()
  var m=n-1
  var o=n-1
  while (m!=0 || o!=0){
    m=n-1
    o=-1
    for (i <- 0 to n-2){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
      }
      else {
        m-=1
      }
    }
    for (i <- n-2 to 0 by -1){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
      }
      else {
        o-=1
      }
    }
  }
}




